--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "greenlock-express": "^2.0.11",
+    "htmlparser2": "^3.9.2",
     "lower-case": "^1.1.4",
     "mongodb": "^3.0.1",
     "morgan": "~1.8.1",
